--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Fashi Template">
-    <meta name="keywords" content="Fashi, unica, creative, html">
+    <meta name="description" content="SF Template">
+    <meta name="keywords" content="SF, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Special Land | IOT</title>
+    <title>Special Land | IoT</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -37,16 +37,16 @@
                 <div class="ht-left">
                     <div class="mail-service">
                         <i class=" fa fa-envelope"></i>
-                        specialland@gmail.com
+                        specialland2021@gmail.com
                     </div>
                     <div class="phone-service">
                         <i class=" fa fa-phone"></i>
-                        <span>+84 93.999.3979</span>
+                        <span>+84 96.171.3979</span>
                     </div>
                 </div>
                 <div class="ht-right">
-                    <a href="#" class="login-panel"><i class="fa fa-user"></i>Đăng nhập</a>
-                    <div class="lan-selector">
+                    <!--<a href="login.html" class="login-panel"><i class="fa fa-user"></i>Đăng nhập</a>-->
+                    <!--<div class="lan-selector">
                         <select class="language_drop" name="countries" id="countries" style="width:300px;">
                             <option value='yt' data-image="img/flag-1.jpg" data-imagecss="flag yt"
                                     data-title="English">
@@ -57,10 +57,10 @@
                                 Vietnam
                             </option>
                         </select>
-                    </div>
+                    </div>-->
                     <div class="top-social">
-                        <a href="#"><i class="ti-facebook"></i></a>
-                        <a href="#"><i class="ti-instagram"></i></a>
+                        <a href="https://www.facebook.com/specialland2021"><i class="ti-facebook"></i></a>
+                        <a href="https://www.instagram.com/"><i class="ti-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -77,70 +77,15 @@
                     </div>
                     <div class="col-lg-7 col-md-7">
                         <div class="advanced-search">
-                            <button type="button" class="category-btn">Tất cả mục</button>
+                            <button type="button" class="category-btn">Tìm kiếm</button>
                             <div class="input-group">
-                                <input type="text" placeholder="Bạn cần tìm gì?">
-                                <button type="button"><i class="ti-search"></i></button>
+                                <FORM method=GET action="http://www.google.com/search">
+                                <input type="text" placeholder="Thông tin thêm"name=q value="">
+                                <button type=submit class="ti-search" name=btng value=""></button>
+                                </FORM>
                             </div>
                         </div>
                     </div>
-                    <!--<div class="col-lg-3 text-right col-md-3">
-                        <ul class="nav-right">
-                            <li class="heart-icon">
-                                <a href="#">
-                                    <i class="icon_heart_alt"></i>
-                                    <span>1</span>
-                                </a>
-                            </li>
-                            <li class="cart-icon">
-                                <a href="#">
-                                    <i class="icon_bag_alt"></i>
-                                    <span>3</span>
-                                </a>
-                                <div class="cart-hover">
-                                    <div class="select-items">
-                                        <table>
-                                            <tbody>
-                                                <tr>
-                                                    <td class="si-pic"><img src="img/select-product-1.jpg" alt=""></td>
-                                                    <td class="si-text">
-                                                        <div class="product-selected">
-                                                            <p>$60.00 x 1</p>
-                                                            <h6>Kabino Bedside Table</h6>
-                                                        </div>
-                                                    </td>
-                                                    <td class="si-close">
-                                                        <i class="ti-close"></i>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="si-pic"><img src="img/select-product-2.jpg" alt=""></td>
-                                                    <td class="si-text">
-                                                        <div class="product-selected">
-                                                            <p>$60.00 x 1</p>
-                                                            <h6>Kabino Bedside Table</h6>
-                                                        </div>
-                                                    </td>
-                                                    <td class="si-close">
-                                                        <i class="ti-close"></i>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <div class="select-total">
-                                        <span>total:</span>
-                                        <h5>$120.00</h5>
-                                    </div>
-                                    <div class="select-button">
-                                        <a href="#" class="primary-btn view-card">VIEW CARD</a>
-                                        <a href="#" class="primary-btn checkout-btn">CHECK OUT</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="cart-price">$150.00</li>
-                        </ul>
-                    </div>-->
                 </div>
             </div>
         </div>
@@ -149,46 +94,28 @@
                 <div class="nav-depart">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
-                        <span>Tất cả</span>
+                        <span>Danh mục</span>
                         <ul class="depart-hover">
-                            <li class="active"><a href="#">A</a></li>
-                            <li><a href="#">B</a></li>
-                            <li><a href="#">C</a></li>
-                            <li><a href="#">D</a></li>
-                            <!--<li><a href="#">E</a></li>
-                            <li><a href="#">F</a></li>
-                            <li><a href="#">G</a></li>
-                            <li><a href="#">H</a></li>-->
+                            <li><a href="about.html">Về Special Land</a></li>
+                            <li><a href="faq.html">Câu hỏi</a></li>
                         </ul>
                     </div>
                 </div>
                 <nav class="nav-menu mobile-menu">
                     <ul>
                         <li class="active"><a href="./index.html">Trang chủ</a></li>
-                        <li><a href="./shop.html">Người thuê</a></li>
                         <li>
                             <a href="#">Phòng/ căn hộ</a>
                             <ul class="dropdown">
-                                <li><a href="#">Căn A</a>
+                                <li><a href="room2.html">Căn hộ 2 người</a>
                                     <!--<ul class="sub-dropdown">
                                         <li><a href="#">Phòng A1</a></li>
                                     </ul>--></li>
-                                <li><a href="#">Căn B</a></li>
-                                <li><a href="#">Căn C</a></li>
+                                <li><a href="room4.html">Căn hộ 4 người</a></li>
+                                <li><a href="room6.html">Căn hộ 6 người</a></li>
                             </ul>
                         </li>
                         <li><a href="./contact.html">Liên hệ</a></li>
-                        <li>
-                            <a href="#">Trang</a>
-                            <ul class="dropdown">
-                                <li><a href="./about.html">Về Special Land</a></li>
-                                <!--<li><a href="./shopping-cart.html">Shopping Cart</a></li>
-                                <li><a href="./check-out.html">Checkout</a></li>-->
-                                <li><a href="./faq.html">Câu hỏi</a></li>
-                                <li><a href="./register.html">Đăng ký</a></li>
-                                <li><a href="./login.html">Đăng nhập</a></li>
-                            </ul>
-                        </li>
                     </ul>
                 </nav>
                 <div id="mobile-menu-wrap"></div>
@@ -218,7 +145,7 @@
                     <div class="blog-details-inner">
                         <div class="blog-detail-title">
                             <h2>Về Special Land</h2>
-                            <p>Sofware | IOT <span>- May 19, 2021</span></p>
+                            <p>Sofware | IoT <span>- May 19, 2021</span></p>
                         </div>
                         <div class="blog-large-pic">
                             <img src="img/blog/blog-detail.jpg" alt="">
@@ -235,78 +162,26 @@
                         </div>
                         <p>Với Special Land, giờ đây căn hộ, nhà ở đều được quản lý dễ dàng hơn bao giờ hết. Hãy liên hệ với chúng tôi để được tận hưởng dịch vụ thông minh, tiện ích.</p>
                         <div class="tag-share">
-                            <!--<div class="details-tag">
-                                <ul>
-                                    <li><i class="fa fa-tags"></i></li>
-                                    <li>Travel</li>
-                                    <li>Beauty</li>
-                                    <li>Fashion</li>
-                                </ul>
-                            </div>-->
                             <div class="blog-share">
                                 <span>Share:</span>
                                 <div class="social-links">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    <a href="#"><i class="fa fa-instagram"></i></a>
-                                    <a href="#"><i class="fa fa-youtube-play"></i></a>
+                                    <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+                                    <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+                                    <a href="https://myaccount.google.com/"><i class="fa fa-google-plus"></i></a>
+                                    <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+                                    <a href="https://www.youtube.com/"><i class="fa fa-youtube-play"></i></a>
                                 </div>
                             </div>
                         </div>
-                        <!--<div class="blog-post">
-                            <div class="row">
-                                <div class="col-lg-5 col-md-6">
-                                    <a href="#" class="prev-blog">
-                                        <div class="pb-pic">
-                                            <i class="ti-arrow-left"></i>
-                                            <img src="img/blog/prev-blog.png" alt="">
-                                        </div>
-                                        <div class="pb-text">
-                                            <span>Previous Post:</span>
-                                            <h5>The Personality Trait That Makes People Happier</h5>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="col-lg-5 offset-lg-2 col-md-6">
-                                    <a href="#" class="next-blog">
-                                        <div class="nb-pic">
-                                            <img src="img/blog/next-blog.png" alt="">
-                                            <i class="ti-arrow-right"></i>
-                                        </div>
-                                        <div class="nb-text">
-                                            <span>Next Post:</span>
-                                            <h5>The Personality Trait That Makes People Happier</h5>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>-->
-                        <!--<div class="posted-by">
-                            <div class="pb-pic">
-                                <img src="img/blog/post-by.png" alt="">
-                            </div>
-                            <div class="pb-text">
-                                <a href="#">
-                                    <h5>Shane Lynch</h5>
-                                </a>
-                                <p>Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                    velit esse cillum bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    amodo</p>
-                            </div>
-                        </div>-->
                         <div class="leave-comment">
                             <h4>Để lại lời nhắn cho chúng tôi</h4>
-                            <form action="#" class="comment-form">
+                            <form action="https://formspree.io/f/mjvjakpg" method="POST" class="comment-form">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <input type="text" placeholder="Tên">
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <input type="text" placeholder="Email">
+                                        <input type="email"name="_replyto" placeholder="Email">
                                     </div>
                                     <div class="col-lg-12">
-                                        <textarea placeholder="Nội dung tin nhắn"></textarea>
+                                        <textarea name="message" placeholder="Nội dung tin nhắn"></textarea>
                                         <button type="submit" class="site-btn">Gửi tin nhắn</button>
                                     </div>
                                 </div>
@@ -363,11 +238,11 @@
                         </div>
                         <ul>
                             <li>Address: 19 Nguyen Huu Tho Street, Tan Phong Ward, District 7, Ho Chi Minh City</li>
-                            <li>Phone: +84 93.999.3979</li>
-                            <li>Email: specialland@gmail.com</li>
+                            <li>Phone: +84 96.171.3979</li>
+                            <li>Email: specialland2021@gmail.com</li>
                         </ul>
                         <div class="footer-social">
-                            <a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/specialland2021"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
@@ -377,12 +252,12 @@
                         <h5>Thông tin</h5>
                         <ul>
                             <li><a href="about.html">Về chúng tôi</a></li>
-                            <li><a href="#">Thanh toán</a></li>
-                            <li><a href="#">Liên hệ</a></li>
+                            <li><a href="faq.html">Thanh toán</a></li>
+                            <li><a href="contact.html">Liên hệ</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <!--<div class="col-lg-2">
                     <div class="footer-widget">
                         <h5>Tài khoản</h5>
                         <ul>
@@ -390,14 +265,14 @@
                             <li><a href="#"></a></li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                 <div class="col-lg-4">
                     <div class="newslatter-item">
                         <h5>Cập nhật thông tin</h5>
                         <p>Để lại địa chỉ Email của bạn:</p>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Nhập địa chỉ Email">
-                            <button type="button">Đăng ký</button>
+                        <form action="https://formspree.io/f/mjvjakpg" method="POST" class="subscribe-form">
+                            <input type="text" name="_replyto" placeholder="Nhập địa chỉ Email">
+                            <button type="submit">Đăng ký</button>
                         </form>
                     </div>
                 </div>
