--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
     <div class="banner-section spad">
         <div class="container-fluid">
             <div class="row">
+                <div class="col-lg-12">
+                    <div class="section-title">
+                        <h2>Dịch vụ</h2>
+                    </div>
+                </div>
                 <div class="col-lg-4">
                     <div class="single-banner">
                         <img src="img/home_1.jpg" alt="">
@@ -308,7 +313,7 @@
             </div>
         </div>
     </section>->>
-    <!-- 2nd Banner Section End -->
+    <!-2nd Banner Section End -->
     <!-- Deal Of The Week Section Begin-->
     <!--<section class="deal-of-week set-bg spad" data-setbg="img/time-bg.jpg">
         <div class="container">
@@ -552,7 +557,7 @@
                             </div>
                             <div class="sb-text">
                                 <h6>Vận chuyển</h6>
-                                <p>Hỗ trợ chuyển nhà giá rẻ</p>
+                                <p>Chuyển nhà giá rẻ</p>
                             </div>
                         </div>
                     </div>
