--- a/product.html
+++ b/product.html
@@ -105,15 +105,15 @@
                     <ul>
                         <li class="active"><a href="./index.html">Trang chủ</a></li>
                         <li>
-                            <a href="#">Phòng/ căn hộ</a>
-                            <ul class="dropdown">
+                            <a href="product.html">Phòng/ căn hộ</a>
+                            <!--<ul class="dropdown">
                                 <li><a href="room2.html">Căn hộ 2 người</a>
-                                    <!--<ul class="sub-dropdown">
+                                    <ul class="sub-dropdown">
                                         <li><a href="#">Phòng A1</a></li>
-                                    </ul>--></li>
+                                    </ul></li>
                                 <li><a href="room4.html">Căn hộ 4 người</a></li>
                                 <li><a href="room6.html">Căn hộ 6 người</a></li>
-                            </ul>
+                            </ul>-->
                         </li>
                         <li><a href="./contact.html">Liên hệ</a></li>
                     </ul>
@@ -145,7 +145,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Tin tức</h2>
+                        <h2>Các loại phòng/ căn hộ</h2>
                     </div>
                 </div>
             </div>
@@ -154,20 +154,10 @@
                     <div class="single-latest-blog">
                         <img src="img/latest-1.jpg" alt="">
                         <div class="latest-text">
-                            <div class="tag-list">
-                                <div class="tag-item">
-                                    <i class="fa fa-calendar-o"></i>
-                                    May 15, 2021
-                                </div>
-                                <div class="tag-item">
-                                    <i class="fa fa-comment-o"></i>
-                                    9
-                                </div>
-                            </div>
-                            <a href="https://vnexpress.net/giam-doc-nhiem-covid-19-bi-cach-chuc-4278679.html">
-                                <h4>Giám đốc nhiễm Covid-19 bị cách chức</h4>
+                            <a href="#">
+                                <h4>Phòng/ căn hộ 2 người ở</h4>
                             </a>
-                            <p>Đơn vị quản lý đánh giá vi phạm liên quan đến phòng, chống dịch của ông Nguyễn Văn Thanh, Giám đốc Công ty Đầu tư Xây dựng số 2 Hà Nội, là "nghiêm trọng".</p>
+                            <p>Với diện tích phòng từ 19m<sup>2</sup> và căn hộ từ 45m<sup>2</sup>, 01 phòng ngủ.</p>
                         </div>
                     </div>
                 </div>
@@ -175,23 +165,11 @@
                     <div class="single-latest-blog">
                         <img src="img/latest-2.jpg" alt="">
                         <div class="latest-text">
-                            <div class="tag-list">
-                                <div class="tag-item">
-                                    <i class="fa fa-calendar-o"></i>
-                                    May 15, 2021
-                                </div>
-                                <div class="tag-item">
-                                    <i class="fa fa-comment-o"></i>
-                                    5
-                                </div>
-                            </div>
-                            <a href="https://vnexpress.net/them-129-ca-covid-19-trong-nuoc-4278658.html">
-                                <h4>Thêm 129 ca Covid-19 trong nước</h4>
+                            <a href="#">
+                                <h4>Phòng/ căn hộ 4 người ở</h4>
                             </a>
                             <p>
-                                Bộ Y tế tối 15/5 ghi nhận 131 ca dương tính nCoV, trong đó 129 ca ghi nhận trong nước và 2 ca cách ly ngay sau khi nhập cảnh.
-
-                                131 ca mắc mới được ghi nhận từ số 3855-3985.
+                                Với diện tích phòng từ 31m<sup>2</sup>, có gác và căn hộ từ 61m<sup>2</sup>, 02 phòng ngủ.
                             </p>
                         </div>
                     </div>
@@ -200,20 +178,10 @@
                     <div class="single-latest-blog">
                         <img src="img/latest-3.jpg" alt="">
                         <div class="latest-text">
-                            <div class="tag-list">
-                                <div class="tag-item">
-                                    <i class="fa fa-calendar-o"></i>
-                                    May 15, 2021
-                                </div>
-                                <div class="tag-item">
-                                    <i class="fa fa-comment-o"></i>
-                                    17
-                                </div>
-                            </div>
-                            <a href="https://vnexpress.net/hang-nghin-chung-minh-nhan-dan-bi-rao-ban-tren-mang-4278639.html">
-                                <h4>Hàng nghìn chứng minh nhân dân bị rao bán trên mạng</h4>
+                            <a href="#">
+                                <h4>Phòng/ căn hộ 6 người ở</h4>
                             </a>
-                            <p>17 GB dữ liệu chứa ảnh chụp chứng minh nhân dân của hàng nghìn người Việt Nam đang bị rao bán với giá 9.000 USD trên diễn đàn hacker.</p>
+                            <p>Với diện tích phòng từ 45m<sup>2</sup>, có gác, giường tầng và căn hộ từ 71m<sup>2</sup>, 03 phòng ngủ.</p>
                         </div>
                     </div>
                 </div>
@@ -227,7 +195,7 @@
                             </div>
                             <div class="sb-text">
                                 <h6>Vận chuyển</h6>
-                                <p>Hỗ trợ chuyển nhà giá rẻ</p>
+                                <p>Chuyển nhà giá rẻ</p>
                             </div>
                         </div>
                     </div>
@@ -238,18 +206,18 @@
                             </div>
                             <div class="sb-text">
                                 <h6>24/7</h6>
-                                <p>Camera an ninh giám sát 24/7</p>
+                                <p>Camera an ninh, bảo vệ giám sát 24/7</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="single-benefit">
                             <div class="sb-icon">
-                                <img src="img/icon-1.png" alt="">
+                                <img src="img/icon-3.png" alt="">
                             </div>
                             <div class="sb-text">
                                 <h6>Thanh toán</h6>
-                                <p>Thanh toán tiền nhà bằng nhiều hình thức</p>
+                                <p>Đa dạng, bằng nhiều hình thức khác nhau</p>
                             </div>
                         </div>
                     </div>
