--- a/contact.html
+++ b/contact.html
@@ -105,15 +105,15 @@
                     <ul>
                         <li class="active"><a href="./index.html">Trang chủ</a></li>
                         <li>
-                            <a href="#">Phòng/ căn hộ</a>
-                            <ul class="dropdown">
+                            <a href="product.html">Phòng/ căn hộ</a>
+                            <!--<ul class="dropdown">
                                 <li><a href="room2.html">Căn hộ 2 người</a>
-                                    <!--<ul class="sub-dropdown">
+                                    <ul class="sub-dropdown">
                                         <li><a href="#">Phòng A1</a></li>
-                                    </ul>--></li>
+                                    </ul></li>
                                 <li><a href="room4.html">Căn hộ 4 người</a></li>
                                 <li><a href="room6.html">Căn hộ 6 người</a></li>
-                            </ul>
+                            </ul>-->
                         </li>
                         <li><a href="./contact.html">Liên hệ</a></li>
                     </ul>
