--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
                             <button type="button" class="category-btn">Tìm kiếm</button>
                             <div class="input-group">
                                 <FORM method=GET action="http://www.google.com/search">
-                                <input type="text" placeholder="Thông tin thêm"name=q value="">
-                                <button type=submit class="ti-search" name=btng value=""></button>
+                                    <a href="http://www.google.com.vn/search?safe=vss"></a>
+                                    <input type="text" placeholder="Thông tin thêm"name=q value="">
+                                    <input type=hidden name=safe value=vss>
+                                    <button type=submit class="ti-search" name=sa value=""></button>
                                 </FORM>
                             </div>
                         </div>
