--- a/about.html
+++ b/about.html
@@ -173,20 +173,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="leave-comment">
-                            <h4>Để lại lời nhắn cho chúng tôi</h4>
-                            <form action="https://formspree.io/f/mjvjakpg" method="POST" class="comment-form">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <input type="email"name="_replyto" placeholder="Email">
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <textarea name="message" placeholder="Nội dung tin nhắn"></textarea>
-                                        <button type="submit" class="site-btn">Gửi tin nhắn</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -195,7 +181,7 @@
     <!-- About Section End -->
 
     <!-- Partner Logo Section Begin -->
-    <div class="partner-logo">
+    <!--<div class="partner-logo">
         <div class="container">
             <div class="logo-carousel owl-carousel">
                 <div class="logo-item">
@@ -225,7 +211,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Partner Logo Section End -->
     <!-- Footer Section Begin -->
     <footer class="footer-section">
