--- a/product.html
+++ b/product.html
@@ -178,11 +178,27 @@
                     <div class="single-latest-blog">
                         <img src="img/latest-3.jpg" alt="">
                         <div class="latest-text">
-                            <a href="#">
+                            <a href="#"></a>
                                 <h4>Phòng/ căn hộ 6 người ở</h4>
                             </a>
                             <p>Với diện tích phòng từ 45m<sup>2</sup>, có gác, giường tầng và căn hộ từ 71m<sup>2</sup>, 03 phòng ngủ.</p>
                         </div>
+                    </div>
+                </div>
+                <div class="blog-details-inner">
+                    <div class="leave-comment">
+                        <h4>Để biết thêm thông tin chi tiết, quý khách hàng vui lòng để lại email và lời nhắn cho chúng tôi</h4>
+                        <form action="https://formspree.io/f/mjvjakpg" method="POST" class="comment-form">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <input type="email"name="_replyto" placeholder="Email">
+                                </div>
+                                <div class="col-lg-12">
+                                    <textarea name="message" placeholder="Nội dung tin nhắn"></textarea>
+                                    <button type="submit" class="site-btn">Gửi tin nhắn</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
