update search engine

--- a/about.html
+++ b/about.html
@@ -79,10 +79,12 @@
                         <div class="advanced-search">
                             <button type="button" class="category-btn">Tìm kiếm</button>
                             <div class="input-group">
-                                <FORM method=GET action="http://www.google.com/search">
-                                <input type="text" placeholder="Thông tin thêm"name=q value="">
-                                <button type=submit class="ti-search" name=btng value=""></button>
-                                </FORM>
+                                <form method=GET action="https://www.google.com/search">
+                                    <a href="https://www.google.com.vn/search?safe=vss"></a>
+                                    <input type="text" placeholder="Thông tin thêm"name=q value="">
+                                    <input type=hidden name=safe value=vss>
+                                    <button type=submit class="ti-search" name=sa value=""></button>
+                                </form>
                             </div>
                         </div>
                     </div>
