--- a/product.html
+++ b/product.html
@@ -178,12 +178,14 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-latest-blog">
-                        <img src="img/latest-3.jpg" alt="">
+                        <img src="img/latest-2.jpg" alt="">
                         <div class="latest-text">
-                            <a href="#"></a>
+                            <a href="#">
                                 <h4>Phòng/ căn hộ 6 người ở</h4>
                             </a>
-                            <p>Với diện tích phòng từ 45m<sup>2</sup>, có gác, giường tầng và căn hộ từ 71m<sup>2</sup>, 03 phòng ngủ.</p>
+                            <p>
+                                Với diện tích phòng từ 45m<sup>2</sup>, có gác, giường tầng và căn hộ từ 71m<sup>2</sup>, 03 phòng ngủ.
+                            </p>
                         </div>
                     </div>
                 </div>
